# wolken-capture

./: .gitignore  AUTHORS  BUGS  CMakeLists.txt  Makefile  README  TODO  common.h  database.cpp  database.h  device.cpp  device.h  main.cpp  v4l2  v4l2.pro  vision.cpp  vision.h
debian/: changelog  control  copyright  docs
debian/manpages/: wolken-capture.1  wolken.1
src/: CMakeLists.txt  common.h  database.cpp  database.h  device.cpp  device.h  main.cpp  wolken-capture.pro  wolken.pro
